semi-working http challenge workflow